--- a/index.html
+++ b/index.html
@@ -9,18 +9,21 @@
 </head>
 <body>
     <nav>
-        <ul id="menu">
-            <li id="logo"><a href="#">Logo</a></li>
-            <li class="item"><a href="#">Entregador</a></li>
-            <li class="item"><a href="#">Restaurante e Mercado</a></li>
-            <li class="item"><a href="#">Carreiras</a></li>
-            <li class="item"><a href="#">iFood Card</a></li>
-        </ul>
-        <div id="criar-conta-entrar">
-            <span id="criar-conta">Criar conta</span>
-            <button id="entrar">Entrar</button>
-        </div>
+        <div id="nav-container">
+            <!-- Coloque a imagem dentro da tag <a> -->
+            <a href="#"><img src="ifood.png" alt="Logo"></a>
 
+            <ul id="menu">
+                <li class="item"><a href="#">Entregador</a></li>
+                <li class="item"><a href="#">Restaurante e Mercado</a></li>
+                <li class="item"><a href="#">Carreiras</a></li>
+                <li class="item"><a href="#">iFood Card</a></li>
+                <li id="criar-conta-entrar">
+                    <span id="criar-conta">Criar conta</span>
+                    <button id="entrar">Entrar</button>
+                </li>
+            </ul>
+        </div>
     </nav>
     <main>
         <div class="centralizado">
