--- a/index.html
+++ b/index.html
@@ -55,6 +55,16 @@
             <li class="item"><a href="#">Cerveja</a></li>
         </ul>
     </footer>
+    <div class="restaurante">
+        <h2>Restaurante</h2>
+        <button>Ver Opções</button>
+    </div>
+    <div class="mercado">
+        <h2>Mercado</h2>
+        <button>Ver Opções</button>
+    </div>
+               
+    
     <script src="script.js"></script>
 </body>
 </html>
