--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
         <div class="restaurante">
             <a href="#"><img src="lanche.avif" alt="Logo"></a>
             <h2>Restaurante</h2>
-            <button>Ver Opções</button>
+            <button>Ver Opções   ></button>
         </div>
         <div class="mercado">
             <a href="#"><img src="mercado.avif" alt="Logo"></a>
             <h2>Mercado</h2>
-            <button>Buscar lojas</button>
+            <button>Buscar lojas   ></button>
         </div>
     </main>
     
